--- a/mailcow-update.yml
+++ b/mailcow-update.yml
@@ -1,1 +1,27 @@
+---
+- name: Run script with confirmation
+  hosts: your_host
+  become: yes
+  tasks:
+    - name: Execute script
+      command: "/opt/mailcow-dockerized/mailcow.sh"
+      args:
+        creates: "/opt/mailcow-dockerized/mailcow.lock"
+      register: script_output
+      ignore_errors: yes
 
+    - name: Confirm script execution
+      pause:
+        prompt: "Do you want to start the script? (y/n): "
+      register: confirm_start
+
+    - name: Handle confirmation
+      command: "/opt/mailcow-dockerized/mailcow.sh"
+      args:
+        creates: "/opt/mailcow-dockerized/mailcow.lock"
+      when: confirm_start.user_input == 'y'
+
+    - name: Print script output
+      debug:
+        msg: "{{ script_output.stdout }}"
+      when: script_output|succeeded
